--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ li a:hover{
 .section-2{
     
     width: 100%;
-    height: 63vh;
+    height: 71vh;
     font-family: 'Bree Serif', serif;
     position: relative;
     
@@ -106,7 +106,7 @@ li a:hover{
     position: absolute;
     content: "";
     width: 100%;
-    height: 63vh;
+    height: 71vh;
     background: url(images/kotmeer.webp);
     z-index: -1;
     opacity: 0.6;
@@ -135,9 +135,10 @@ li a:hover{
 .a{
     border: 2px solid orangered;
     border-radius: 15px;
-    height: 335px;
+    min-height: 335px;
     background-color: rgb(240, 240, 240);
     margin-left: 20px;
+    padding-bottom: 15px;
     
     
     
