--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ li a:hover{
 .section-2{
     
     width: 100%;
-    height: 71vh;
+    min-height: 507px;
     font-family: 'Bree Serif', serif;
     position: relative;
     
@@ -106,7 +106,7 @@ li a:hover{
     position: absolute;
     content: "";
     width: 100%;
-    height: 71vh;
+    height: 100%;
     background: url(images/kotmeer.webp);
     z-index: -1;
     opacity: 0.6;
@@ -122,7 +122,6 @@ li a:hover{
 
 .ordering{
     margin-top: 50px;
-    height: 50vh;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
@@ -135,7 +134,7 @@ li a:hover{
 .a{
     border: 2px solid orangered;
     border-radius: 15px;
-    min-height: 335px;
+    min-height: 291px;
     background-color: rgb(240, 240, 240);
     margin-left: 20px;
     padding-bottom: 15px;
